--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "express": "^4.11.2",
+    "lodash": "^4.17.4",
     "open": "0.0.5",
     "socket.io": "1.3.4"
   }
