--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "deploy": "git push heroku master",
     "start": "node app.js",
     "local-start": "LOCAL=TRUE node app.js",
-    "commit": "git add . && git commit -m 'Update' && git push"
+    "push": "git add . && git commit -m 'Update' && git push"
   },
   "dependencies": {
     "express": "^4.11.2",
